--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Samuel Johnson <smbjohnson98@gmail.com>
 Maintainer: Samuel Johnson <smbjohnson98@gmail.com>
 Description: This package allows users to access data found on
     the basketball statistic website eurobasket.com.
-License: coolcoolcool
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
