--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: This package allows users to access data found on
     the basketball statistic website eurobasket.com.
 License: GPL-3
 Encoding: UTF-8
-LazyData: false
+LazyData: true
 RoxygenNote: 7.1.1
 Depends: 
     R (>= 2.10)
