--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 export(CreateHeader)
 export(DraftTeam)
 export(PlayerHrefGrab)
+export(PlayerInfoGrab)
 import(data.table)
+import(devtools)
 import(plyr)
 import(stringr)
 import(tidyverse)
