--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(CreateHeader)
 export(DraftTeam)
 export(PlayerHrefGrab)
 export(PlayerInfoGrab)
+export(rename_rebound)
 import(data.table)
 import(devtools)
 import(plyr)
