Fixed issue with html_attr not being found

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,9 +16,10 @@ Imports:
     devtools,
     lubridate,
     xml2,
-    dplyr
+    dplyr,
+    rvest
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Depends: 
     R (>= 2.10)
