--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,10 @@ export(PlayerHrefGrab)
 export(PlayerInfoGrab)
 export(SeasonStatGrab)
 export(rename_rebound)
-import(data.table)
 import(devtools)
 import(lubridate)
 import(plyr)
 import(stringr)
 import(tidyverse)
 import(xml2)
+importFrom(data.table,setnames)
