Fixing error could not find function separate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(SeasonStatGrab)
 export(rename_rebound)
 import(devtools)
 import(lubridate)
+import(magrittr)
 import(plyr)
 import(stringr)
 import(tidyverse)
