--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,9 @@ Imports:
     lubridate,
     xml2,
     dplyr,
-    rvest
+    rvest,
+    tidyr,
+    magrittr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
