Fixing error from magrittr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,9 @@ export(SeasonStatGrab)
 export(rename_rebound)
 import(devtools)
 import(lubridate)
-import(magrittr)
 import(plyr)
 import(stringr)
 import(tidyverse)
 import(xml2)
 importFrom(data.table,setnames)
+importFrom(magrittr,"%>%")
